Fix floating point issues on bill and add keyboard accelerators

--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
@@ -88,7 +88,7 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="platesLabel" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="plateOrdersLabel" alignment="0" pref="193" max="32767" attributes="0"/>
+                                  <Component id="platesOrdersLabel" alignment="0" pref="193" max="32767" attributes="0"/>
                                   <Component id="platesCommentsLabel" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -106,7 +106,7 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="dessertsQuantityTextfield" min="-2" pref="50" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="orderPlatesButton" min="-2" pref="155" max="-2" attributes="0"/>
+                          <Component id="platesOrderButton" min="-2" pref="155" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="platesQuantityLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
@@ -180,7 +180,7 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-              <Component id="plateOrdersLabel" min="-2" max="-2" attributes="0"/>
+              <Component id="platesOrdersLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="platesLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -192,7 +192,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="platesCommentTextfield" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="platesCommentsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="orderPlatesButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="platesOrderButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -239,6 +239,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="tableComboboxItemStateChanged"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tableComboboxActionPerformed"/>
       </Events>
       <AuxValues>
@@ -324,7 +325,7 @@
         <Property name="text" type="java.lang.String" value="Pay"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="plateOrdersLabel">
+    <Component class="javax.swing.JLabel" name="platesOrdersLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Plate orders:"/>
       </Properties>
@@ -340,9 +341,6 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="platesComboboxActionPerformed"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -356,6 +354,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="X"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="platesQuantityTextfieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="platesCommentTextfield">
     </Component>
@@ -364,12 +365,12 @@
         <Property name="text" type="java.lang.String" value="Comments:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="orderPlatesButton">
+    <Component class="javax.swing.JButton" name="platesOrderButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Order plates"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="orderPlatesButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="platesOrderButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="dessertsLabel">
