Implement drinks bill

--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
@@ -309,6 +309,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="drinksAddButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="billLabel">
       <Properties>
