--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
@@ -31,7 +31,7 @@
                       <EmptySpace min="-2" pref="926" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="18" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="jSeparator1" min="-2" pref="1092" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -71,15 +71,15 @@
                               <Component id="billAmountLabel" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace type="separate" pref="32" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="eurLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="billPaidStateLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="drinksAddButton" max="32767" attributes="0"/>
-                          <Component id="billPayButton" min="-2" pref="75" max="-2" attributes="0"/>
+                          <Component id="billPayButton" pref="106" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -325,8 +325,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="billPayButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Pay"/>
+        <Property name="text" type="java.lang.String" value="Checkout"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="billPayButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="platesOrdersLabel">
       <Properties>
