Implement working multiuser with data persistence

--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurantroommanager/guis/RestaurantRoomManagerGui.form
@@ -79,7 +79,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="drinksAddButton" max="32767" attributes="0"/>
-                          <Component id="billPayButton" pref="106" max="32767" attributes="0"/>
+                          <Component id="billCheckoutButton" pref="106" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -148,7 +148,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="billPayButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="billCheckoutButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="billPaidStateLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="billAmountLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="billLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -240,7 +240,6 @@
       </Properties>
       <Events>
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="tableComboboxItemStateChanged"/>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tableComboboxActionPerformed"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -323,12 +322,12 @@
         <Property name="text" type="java.lang.String" value="NOT PAID"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="billPayButton">
+    <Component class="javax.swing.JButton" name="billCheckoutButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Checkout"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="billPayButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="billCheckoutButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="platesOrdersLabel">
