Fix focus bugs and implement order notify

--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurant/roommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurant/roommanager/guis/RestaurantRoomManagerGui.form
@@ -1,10 +1,85 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Menu class="javax.swing.JMenuBar" name="menuBar">
+      <SubComponents>
+        <Menu class="javax.swing.JMenu" name="waitersMenu">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Waiters"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="modifyPasswordMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="addNewWaiterMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="tablesMenu">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Tables"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="listTablesMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="totalNumberClientsMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="totalBillsMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="platesMenu">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Plates"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="listPlatesMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="List plates"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="listDessertsMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="List desserts"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="platesMenuSeparator">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="createPlateMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Add new plate"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="removePlateMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Remove existing plate"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+      </SubComponents>
+    </Menu>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="0"/>
   </Properties>
   <SyntheticProperties>
+    <SyntheticProperty name="menuBar" type="java.lang.String" value="menuBar"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
@@ -221,7 +296,7 @@
                   <Component id="ordersReadyCheckbox" min="-2" max="-2" attributes="0"/>
                   <Component id="readAvailablePlatesButton" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="15" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -466,6 +541,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Read available plates"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="readAvailablePlatesButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="billAmountLabel">
       <Properties>
