--- a/RestaurantRoomManager/src/be/wget/inpres/java/restaurant/roommanager/guis/RestaurantRoomManagerGui.form
+++ b/RestaurantRoomManager/src/be/wget/inpres/java/restaurant/roommanager/guis/RestaurantRoomManagerGui.form
@@ -36,6 +36,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="List tables"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listTablesMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="totalNumberClientsMenuItem">
               <Properties>
