--- a/RestaurantSharedObjects/src/be/wget/inpres/java/restaurant/usersmanager/guis/LoginGui.form
+++ b/RestaurantSharedObjects/src/be/wget/inpres/java/restaurant/usersmanager/guis/LoginGui.form
@@ -76,7 +76,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="dateLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
+        <Property name="text" type="java.lang.String" value=" "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="loginLabel">
